<resources>
    <string name="app_name">TCGApp</string>
    <string name="action_sign_in_short">Registrate</string>
    <string name="email">Correo</string>
    <string name="minimum_password">contraseña muy corta, minimo 6 caracteres</string>
    <string name="auth_failed">Error!, revisa que tu mail y contraseña sean correctos</string>
    <string name="change_email">Cambiar correo</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Borrar usuario</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="btn_login">Entrar!</string>
    <string name="prompt_password">inserta tu contraseña</string>
    <string name="btn_link_to_register">¿no estas registrado?</string>
    <string name="btn_link_to_login">ya estoy registrado</string>
    <string name="title_activity_reset_password">ReiniciarContraseña</string>
    <string name="btn_forgot_password">¿olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Reiniciar contraseña</string>
    <string name="btn_back"><![CDATA[<< volver]]></string>
    <string name="hint_new_email">Nuevo correo</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">enviar</string>
    <string name="btn_remove">borrar</string>
    <string name="btn_sign_out">cerrar sesion</string>
    <string name="lbl_forgot_password">¿olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">te enviaremos un correo para reestablecer tu contraseña</string>
    <string name="email_id">Email ID</string>
    <string name="registrar_carta">registrar carta</string>
    <string name="ir_a_lista_de_cartas">ir a lista de cartas</string>
    <string name="seleccionar_imagen">seleccionar imagen</string>
    <string name="guardar_carta">Guardar carta</string>
    <string name="nombre_de_carta">nombre de carta</string>
    <string name="descripcion">descripción</string>
    <string name="precio">precio</string>
    <string name="tienda">tienda</string>
    <string name="rareza">Rareza</string>
    <string name="stock">stock</string>
    <string name="borrar_carta">Borrar carta</string>
    <string name="error">ups! hubo un problema</string>
    <string name="shortPassword">contraseña muy corta! tienen que ser minimo 6 caracteres</string>
    <string name="UpdatePassword">contraseña actualizada! vuelvete a logear</string>
    <string name="goodbye">adios!</string>
    <string name="errorPerfil">fallo en borrar tu perfil! asegurate de estar conectado a internet</string>
    <string name="user">usuario:</string>
    <string name="updated">actualizado!</string>
    <string name="cardItem">cardItem</string>
    <string name="selectPic">elige una imagen</string>
    <string name="yes">si</string>
    <string name="no">no</string>
    <string name="manual">¿Desea configurar los permisos de forma manual?</string>
    <string name="permisosAceptados">Los permisos no fueron aceptados</string>
    <string name="permisosDesactivados">permisos desactivados</string>
    <string name="mustAcept">Debe aceptar los permisos para el correcto funcionamiento de la App</string>
    <string name="acept">aceptar</string>
    <string name="cartaRegistrada">carta registrada</string>
    <string name="newCard">nueva carta registrada!</string>
    <string name="aviso">aviso de nueva carta</string>
    <string name="loading">cargando lista de cartas...</string>
    <string name="password">ingresa contraseña</string>
    <string name="mail">ingresa mail!</string>
    <string name="instruct">revisa tu correo! te enviamos instrucciones</string>
    <string name="mailinstruct">introduce tu correo para enviarte instrucciones</string>
    <string name="hola">bienvenido!</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lista_de_cartas">Lista de cartas</string>
    <string name="menu_principal">menu principal</string>
</resources>
